--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<li> <a href="/about/">about</a> </li>
+<li> <a href="http://www.coroflot.com">portfolio</a> </li>
+<li> <a href="/contact/">contact</a> </li>
 </body>
 </html>
 
+=======
+</html>
