--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <li> <a href="/about/">about</a> </li>
-<li> <a href="http://www.coroflot.com">portfolio</a> </li>
+<li> <a href="http://www.coroflot.com/rjarmand">portfolio</a> </li>
 <li> <a href="/contact/">contact</a> </li>
 </body>
 </html>
