--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <li> <a href="/about/">about</a> </li>
-<li> <a href="http://github.com/rjarmand/" target="_parent">github</a> </li>
-<li> <a href="http://www.coroflot.com/rjarmand" target="_parent">portfolio</a> </li>
+<li> <a href="http://github.com/rjarmand/" target="_blank">github</a> </li>
+<li> <a href="http://www.coroflot.com/rjarmand" target="_blank">portfolio</a> </li>
 <li> <a href="/contact/">contact</a> </li>
 </body>
 </html>
