--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@ Welcome
 </title>
 </head>
 <body>
+<div id="columnLeft">
 <li> <a href="/about/">about</a> </li>
 <li> <a href="http://github.com/rjarmand/" target="_blank">github</a> </li>
 <li> <a href="http://www.coroflot.com/rjarmand" target="_blank">portfolio</a> </li>
 <li> <a href="/contact/">contact</a> </li>
+</div>
 </body>
 </html>
