--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@ Welcome
 <li> <a href="http://www.coroflot.com/rjarmand" target="_blank">portfolio</a> </li>
 <li> <a href="/contact/">contact</a> </li>
 </div>
+<div id="mainColumn">
+Content for main column
+</div>
 </body>
 </html>
