--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Welcome
 <li> <a href="/about/">about</a> </li>
 <li> <a href="http://github.com/rjarmand/" target="_blank">github</a> </li>
 <li> <a href="http://www.coroflot.com/rjarmand" target="_blank">portfolio</a> </li>
-<li> <a href="/contact/">contact</a> </li>
+<li> <a href="mailto:rjarmand@yahoo.com">contact</a> </li>
 </div>
 <div id="mainColumn">
 Content for main column
