--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ Welcome
 </head>
 <body>
 <div id="columnLeft">
+<li> <a href="#">home</a> </li>
 <li> <a href="/about/">about</a> </li>
 <li> <a href="http://github.com/rjarmand/" target="_blank">github</a> </li>
 <li> <a href="http://www.coroflot.com/rjarmand" target="_blank">portfolio</a> </li>
