--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </div>
 
           <div class="large-4 columns">
-            Phone: 510-862-6759
+            twitter: <a href="http://www.twitter.com/hellohaze80">@hellohaze80</a>
           </div>
 
         </div>
