--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
             twitter: <a href="http://www.twitter.com/hellohaze80">@hellohaze80</a>
           </div>
 
+          <div class="large-4 columns">
+         medium: <a href="http://medium.com/@hellohaze80/my-thoughts-on-the-oneplus-two-fbbdee0e4817">@hellohaze80</a>
+          </div>
+
         </div>
       </div>
 
