--- a/index.html
+++ b/index.html
@@ -89,28 +89,22 @@
           <hr>
           <h4>Contact Me</h4>
 
-<!--
-          <div class="large-4 columns">
-<strong>Email</strong>: <a href="mailto:rjarmand@yahoo.com"><span class="__cf_email__" data-cfemail="523f37123f2b223d2026343d3e3b3d7c313d3f">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
-/* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></a>
-          </div>
--->
-
-          <div class="large-4 columns">
+<div class="row">
+  <div class="large-4 columns"><!-- ... --></div>
             LinkedIn: <a href="https://www.linkedin.com/in/rahmanhayes/">linkedin.com/in/rahmanhayes/</a>
-          </div>
 
-          <div class="large-4 columns">
             github: <a href="http://www.github.com/rjarmand">@rjarmand</a>
-          </div>
 
-          <div class="large-4 columns">
-            twitter: <a href="http://www.twitter.com/hellohaze80">@hellohaze80</a>
-          </div>
+       twitter: <a href="http://www.twitter.com/hellohaze80">@hellohaze80</a>
 
-          <div class="large-4 columns">
          medium: <a href="http://medium.com/@hellohaze80/my-thoughts-on-the-oneplus-two-fbbdee0e4817">@hellohaze80</a>
-          </div>
+
+  <div class="large-8 columns"><!-- ... --></div>
+
+</div>
+
+
+
 
         </div>
       </div>
