--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h4>Contact Me</h4>
 
 <div class="row">
-    <div class="large-4 columns"><!-- ... --></div>
+    <div class="large-4 columns">
 
         LinkedIn: <a href="https://www.linkedin.com/in/rahmanhayes/">linkedin.com/in/rahmanhayes/</a>
         <br/>
@@ -100,7 +100,11 @@
         <br/>
          medium: <a href="http://medium.com/@hellohaze80/my-thoughts-on-the-oneplus-two-fbbdee0e4817">@hellohaze80</a>
         <br/>
-      <div class="large-8 columns"><!-- ... --></div>
+      </div>
+
+      <div class="large-8 columns">
+          <!-- ... -->
+      </div>
 
 </div>
 
