Change Twitter Handle

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <br/>
             github: <a href="http://www.github.com/rjarmand">@rjarmand</a>
         <br/>
-       twitter: <a href="http://www.twitter.com/hellohaze80">@hellohaze80</a>
+       twitter: <a href="http://www.twitter.com/rahmanhayes">@rahmanhayes</a>
         <br/>
          medium: <a href="http://medium.com/@hellohaze80/my-thoughts-on-the-oneplus-two-fbbdee0e4817">@hellohaze80</a>
         <br/>
