Change Github Handle

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         LinkedIn: <a href="https://www.linkedin.com/in/rahmanhayes/">linkedin.com/in/rahmanhayes/</a>
         <br/>
-            github: <a href="http://www.github.com/rjarmand">@rjarmand</a>
+            github: <a href="http://www.github.com/hellonoah">@hellonoah</a>
         <br/>
        twitter: <a href="http://www.twitter.com/rahmanhayes">@rahmanhayes</a>
         <br/>
