Add Updated Files

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <!-- Custom styles for this template -->
     <link href="navbar-top.css" rel="stylesheet">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118833128-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118833128-1');
+</script>
+
   </head>
 
   <body>
@@ -410,9 +420,9 @@
        <a href="https://www.linkedin.com/in/rahmanhayes/"><img src="img/In-2C-89px-TM.png" alt="LinkedIn Logo" height="21px" width="22px"></a> &nbsp; 
        <a href="http://www.github.com/rahmanhayes" target="_blank"><img src="img/GitHub_Logo.png" alt="Github Logo" height="25px" width="61px"></a> &nbsp; 
 
- <a href="http://www.facebook.com/moderrn.up" target="_blank"><img src="img/flogo_RGB_HEX-114.png" alt="Facebook Icon" height="25px" width="25px"></a> &nbsp; 
+ <a href="http://www.facebook.com/moderrn.up" target="_blank"><img src="img/flogo_RGB_HEX-114.png" alt="http://www.facebook.com/rahman.hayes" height="25px" width="25px"></a> &nbsp; 
 
- <a href="http://www.twitter.com/rahmanhayes" target="_blank">      <img src="img/Twitter_Social_Icon_Circle_Color.png" alt="Twitter Icon" height="25px" width="25px"></a> &nbsp; 
+ <a href="http://www.twitter.com/rahmanhayes" target="_blank">      <img src="img/Twitter_Social_Icon_Circle_Color.png" alt="http://www.twitter.com/rahmanhayes" height="25px" width="25px"></a> &nbsp; 
  <a href="https://medium.com/@moderrn" target="_blank">      <img src="img/Monogram.png" alt="Twitter Icon" height="25px" width="25px"></a> &nbsp; 
         <br/>
 </p>
