Adding Modified Index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <img class="img-fluid" src="img/portfolio/thumbnails/Away_Page1.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Away Newsletter Redesign</h4>
+              <h4>Away Newsletter</h4>
               <p class="text-muted">Marketing, Web Design</p>
             </div>
           </div>
@@ -184,7 +184,7 @@
               <img class="img-fluid" src="img/portfolio/thumbnails/flux_logo.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Flux Logo</h4>
+              <h4>Flux</h4>
               <p class="text-muted">Branding</p>
             </div>
           </div>
@@ -379,7 +379,7 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Flux</h2>
                   <p class="item-intro text-muted">Project Branding for a travel company called Flux.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/fullsize/flux_logo.jpg" alt="">
                   <p>Branding design for travel company. Tools: Adobe Illustrator.</p>
