--- a/index.html
+++ b/index.html
@@ -417,13 +417,15 @@
 
 <h4>Social</h4>
 <p>     
-       <a href="https://www.linkedin.com/in/rahmanhayes/"><img src="img/In-2C-89px-TM.png" alt="LinkedIn Logo" height="21px" width="22px"></a> &nbsp; 
-       <a href="http://www.github.com/rahmanhayes" target="_blank"><img src="img/GitHub_Logo.png" alt="Github Logo" height="25px" width="61px"></a> &nbsp; 
+<a href="https://www.linkedin.com/in/rahmanhayes/" target="_blank"><img src="img/In-2C-89px-TM.png" alt="LinkedIn Logo" height="21px" width="22px"></a> &nbsp; 
 
- <a href="http://www.facebook.com/moderrn.up" target="_blank"><img src="img/flogo_RGB_HEX-114.png" alt="http://www.facebook.com/rahman.hayes" height="25px" width="25px"></a> &nbsp; 
+<a href="http://www.github.com/rahmanhayes" target="_blank"><img src="img/GitHub_Logo.png" alt="Github Logo" height="25px" width="61px"></a> &nbsp; 
 
- <a href="http://www.twitter.com/rahmanhayes" target="_blank">      <img src="img/Twitter_Social_Icon_Circle_Color.png" alt="http://www.twitter.com/rahmanhayes" height="25px" width="25px"></a> &nbsp; 
- <a href="https://medium.com/@moderrn" target="_blank">      <img src="img/Monogram.png" alt="Twitter Icon" height="25px" width="25px"></a> &nbsp; 
+<a href="http://www.facebook.com/moderrn.up" target="_blank"><img src="img/flogo_RGB_HEX-114.png" alt="http://www.facebook.com/rahman.hayes" height="25px" width="25px"></a> &nbsp; 
+
+<a href="http://www.twitter.com/rahmanhayes" title="twitter.com/rahmanhayes" target="_blank"><img src="img/Twitter_Social_Icon_Circle_Color.png" alt="http://www.twitter.com/rahmanhayes" height="25px" width="25px"></a> &nbsp; 
+
+<a href="https://medium.com/@moderrn" title="@moderrn" target="_blank"><img src="img/Monogram.png" alt="Twitter Icon" height="25px" width="25px"></a> &nbsp; 
         <br/>
 </p>
       </div>
